@@ -223,7 +223,7 @@ function accept ()
 
    vntk.msg( _("Find and Kill a pilot"), fmt.f( _("{plt} is a notorious {target_faction} pilot who is wanted by the authorities, dead or alive. Any citizen who can find and neutralize {plt} by any means necessary will be given {credits} as a reward. {paying_faction} authorities have lost track of this pilot in the {sys} system. It is very likely that the target is no longer there, but this system may be a good place to start an investigation."),
       {plt=mem.name, target_faction=mem.target_faction, credits=fmt.credits(mem.credits), paying_faction=mem.paying_faction, sys=mem.mysys[1]} ) )
-   mem.jumphook = hook.enter( "enter" )
+   mem.jumphook = hook.jumpin( "enter" )
    mem.hailhook = hook.hail( "hail" )
    mem.landhook = hook.land( "land" )
 
@@ -262,7 +262,7 @@ function enter ()
 
          -- Get the position of the target
          local jp  = jump.get(system.cur(), mem.last_sys)
-	 local pos
+         local pos
          if jp ~= nil then
             local x = 6000 * rnd.rnd() - 3000
             local y = 6000 * rnd.rnd() - 3000
@@ -300,7 +300,7 @@ end
 
 -- Enemies wait for the player
 function trigger_ambush()
-   local jp     = jump.get(system.cur(), mem.last_sys)
+   local jp = jump.get( system.cur(), mem.last_sys )
    local x, y
    ambush = {}
 
